--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -94,11 +94,11 @@
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/.pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/pdf/2504.13936" target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper to be added</span>
+                    <span>Paper </span>
                   </a>
                 </span>
 
@@ -106,12 +106,12 @@
 
             <!-- ArXiv abstract Link -->
             <span class="link-block">
-              <a href="https://arxiv.org/abs/2302.029..." target="_blank"
+              <a href="https://arxiv.org/abs/2504.13936" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="ai ai-arxiv"></i>
                 </span>
-                <span>arXiv to be added </span>
+                <span>arXiv</span>
               </a>
             </span>
           </div>
