--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -19,7 +19,7 @@
 <!--   <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
 
-  <title>ViMo: A Generative Visual GUI World Model for App Agent</title>
+  <title>ViMo: A Generative Visual GUI World Model for App Agents</title>
 <!--   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
