--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -221,9 +221,9 @@ Framework of our ViMo. We first detect text content (actual words) in the curren
     <div class="columns is-centered">
       <div class="column is-full">
         <div class="content">
-          <h2 class="title is-3">Quantitative Comparisons</h2>
+          <h2 class="title is-3">World Model Enhanced App Agent</h2>
           <center>
-          <img src="static/images/exp.png" alt=" " class="center-image blend-img-background"/>
+          <img src="static/images/exp_1.png" alt=" " class="center-image blend-img-background"/>
           </center>
           <div class="level-set has-text-centered">
             <p>
