--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -228,7 +228,16 @@ Framework of our ViMo. We first detect text content (actual words) in the curren
           <div class="level-set has-text-centered">
             <p>
 Decision optimisation comparisons on APP agent performance. Apps are categorised into “Leisure”, “Work”, and “System”.
+          </div>                   
+          <br>
+          <center>
+            <img src="static/images/exp_2.png" alt="New Breakthrough" class="center-image blend-img-background"/>
+          </center>
+          <div class="level-set has-text-centered">
+            <p>
+(a) Comparison with various world models, (b) Zero-shot evaluation experiments, and (c) Online evaluation through real-time environment interaction.            </p>
           </div>
+
         </div>
       </div>
     </div>
