--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -270,8 +270,7 @@ shown on the left and the generated GUI on the right.
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>
-      @article{luo2025vimo,
+    <pre><code>@article{luo2025vimo,
   title={ViMo: A Generative Visual GUI World Model for App Agents},
   author={Luo, Dezhao and Tang, Bohan and Li, Kang and Papoudakis, Georgios and Song, Jifei and Gong, Shaogang and Hao, Jianye and Wang, Jun and Shao, Kun},
   journal={arXiv preprint arXiv:2504.13936},
