--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 <!--   <meta name="description" content="Given a video and a text prompt, Dreamix edits the video while maintaining fidelity to color, posture, object size and camera pose, resulting in a temporally consistent video."> -->
-  <meta property="og:title" content="ViMo: A Generative Visual GUI World Model for App Agent"/>
+  <meta property="og:title" content="ViMo: A Generative Visual GUI World Model for App Agents"/>
 <!--   <meta property="og:description" content="Given a video and a text prompt, Dreamix edits the video while maintaining fidelity to color, posture, object size and camera pose, resulting in a temporally consistent video."/> -->
 <!--   <meta property="og:url" content="https://dreamix-video-editing.github.io"/> -->
 <!--   <meta property="og:image" content="static/image/og_banner_image.png" /> -->
