--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -61,7 +61,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.4rem;">VSC-RL:<br>ADVANCING AUTONOMOUS VLM AGENTS<br>VIA VARIATIONAL SUBGOAL-CONDITIONED REINFORCEMENT LEARNING</h1>
+            <h1 class="title is-1 publication-title" style="font-size: 2.4rem;">ADVANCING AUTONOMOUS VLM AGENTS<br>VIA VARIATIONAL SUBGOAL-CONDITIONED REINFORCEMENT LEARNING</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -82,7 +82,7 @@
               </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup> University of Liverpool<br><sup>2</sup> University of Southampton<br><sup>3</sup> Huawei Noah's Ark Lab<br><sup>4</sup> Tianjin University<br><sup>5</sup> University College London</span>
+                    <span class="author-block"><sup>1</sup> University of Liverpool <sup>2</sup> University of Southampton <sup>3</sup> Huawei Noah's Ark Lab<br><sup>4</sup> Tianjin University <sup>5</sup> University College London</span>
                     <span class="eql-cntrb"><small><br><sup>* </sup>Equal Contribution</small></span>
                     <span class="eql-cntrb"><small><br><sup>† </sup>Corresponding authors: shaokun2@huawei.com</small></span>
                   </div>
