Update VSC-RL page

--- a/VSC-RL/index.html
+++ b/VSC-RL/index.html
@@ -439,7 +439,7 @@
               
 
           <div class="content">
-            <h3 class="subtitle is-6" style="margin-top: 1rem;">For full results and more details, please refer to our <a href="https://arxiv_link" target="_blank" style="color:#3273dc;">paper</a>.</h3>
+            <h3 class="subtitle is-6" style="margin-top: 1rem;">For full results and more details, please refer to our <a href="https://arxiv.org/pdf/2502.07949" target="_blank" style="color:#3273dc;">paper</a>.</h3>
           </div>
         </div>
       </div>
