--- a/ViMo/index.html
+++ b/ViMo/index.html
@@ -102,7 +102,16 @@
                   </a>
                 </span>
 
-
+             <!-- Github link -->
+                  <span class="link-block">
+                    <a href="https://github.com/ai-agents-2030/ViMo" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Code</span>
+                  </a>
+                </span>
 
             <!-- ArXiv abstract Link -->
             <span class="link-block">
@@ -114,6 +123,8 @@
                 <span>arXiv</span>
               </a>
             </span>
+
+                
           </div>
         </div>
       </div>
