Update roadmap items in index.html

--- a/Darwin-Mobile-Agent/index.html
+++ b/Darwin-Mobile-Agent/index.html
@@ -919,7 +919,7 @@
                     <ul class="roadmap-list">
                         <li class="roadmap-item">
                             <span class="check">✓</span>
-                            Cloud phone infrastructure with Alibaba Cloud EDS
+                            Cloud phone infrastructure with Alibaba Cloud
                         </li>
                         <li class="roadmap-item">
                             <span class="check">✓</span>
@@ -959,7 +959,7 @@
                         </li>
                         <li class="roadmap-item">
                             <span class="check"></span>
-                            Multi-device coordination
+                            Device abstraction layer for emulators and physical devices
                         </li>
                         <li class="roadmap-item">
                             <span class="check"></span>
