--- a/Darwin-Mobile-Agent/index.html
+++ b/Darwin-Mobile-Agent/index.html
@@ -806,7 +806,7 @@
                 <li><a href="#docs">Docs</a></li>
             </ul>
             <div class="nav-cta">
-                <a href="./Darwin_Mobile_Agent_A_Roadmap_for_Self-Evolution.pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                <a href="./tech_report.pdf" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                     📄 Paper
                 </a>
                 <a href="https://github.com/ai-agents-2030/darwin-mobile-agent" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
@@ -836,7 +836,7 @@
                     <a href="https://github.com/ai-agents-2030/darwin-mobile-agent" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
                         🚀 Get Started
                     </a>
-                    <a href="./Darwin_Mobile_Agent_A_Roadmap_for_Self-Evolution.pdf" class="btn btn-secondary" target="_blank">
+                    <a href="./tech_report.pdf" class="btn btn-secondary" target="_blank">
                         📄 Read Paper
                     </a>
                 </div>
@@ -1116,7 +1116,7 @@
             <div class="footer-content">
                 <div class="footer-links">
                     <a href="https://github.com/ai-agents-2030/darwin-mobile-agent" target="_blank" rel="noopener noreferrer">GitHub</a>
-                    <a href="./Darwin_Mobile_Agent_A_Roadmap_for_Self-Evolution.pdf" target="_blank" rel="noopener noreferrer">Paper</a>
+                    <a href="./tech_report.pdf" target="_blank" rel="noopener noreferrer">Paper</a>
                     <a href="https://github.com/ai-agents-2030/darwin-mobile-agent/issues" target="_blank" rel="noopener noreferrer">Issues</a>
                     <a href="https://github.com/ai-agents-2030/darwin-mobile-agent/tree/main/docs/darwin_agent" target="_blank">Documentation</a>
                 </div>
